src/objects/Aftersales__c.object
<CustomObject>
    <description>Contact Portfolio: To record MBCL Aftersales record
Changed object name from &quot;Aftersales Record&quot; to &quot;Aftersales&quot;</description>
    <fields>
        <fullName>Service_Branch__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: The branch of the dealer
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Branch&quot;</description>
        <inlineHelpText>The branch of the dealer</inlineHelpText>
        <label>Service Branch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Job code for the service type
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Code&quot;</description>
        <inlineHelpText>Job code for the service type</inlineHelpText>
        <label>Service Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Consultant__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: The service consultant involved in the service
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Consultant&quot;</description>
        <inlineHelpText>The service consultant involved in the service</inlineHelpText>
        <label>Service Consultant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contact__c</fullName>
        <description>Who brings the vehicle to service
Attribute in Data Dictionary object Aftersales is &quot;Service_Contact&quot;</description>
        <label>Service_Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Aftersales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Content__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: The service content for this aftersale, e.g. repair, paint
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Content&quot;</description>
        <inlineHelpText>The service content for this aftersale, e.g. repair, paint</inlineHelpText>
        <label>Service Content</label>
        <picklist>
            <picklistValues>
                <fullName>Body &amp; paint repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine Service incl. repair</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Date_In__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: The date when the vehicle comes in for service
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_DateIn&quot;</description>
        <inlineHelpText>The date when the vehicle comes in for service</inlineHelpText>
        <label>Service Date In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Date_Out__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: The date when complete the service and send vehicle back to customer
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_DateOut&quot;</description>
        <inlineHelpText>The date when complete the service and send vehicle back to customer</inlineHelpText>
        <label>Service Date Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Service/Invoice date
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Date&quot;</description>
        <inlineHelpText>Service/Invoice date</inlineHelpText>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Dealer__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Code of the dealer that deliver the service
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Dealer&quot;</description>
        <inlineHelpText>Code of the dealer that deliver the service</inlineHelpText>
        <label>Service Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Aftersales_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Details__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Detailed description of service
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Details&quot;</description>
        <inlineHelpText>Detailed description of service</inlineHelpText>
        <label>Service Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Invoice_Currency__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Value Currency for Invoice
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_InvoiceCurrency&quot;</description>
        <inlineHelpText>Value Currency for Invoice</inlineHelpText>
        <label>Service Invoice Currency</label>
        <picklist>
            <picklistValues>
                <fullName>RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Invoice_Number__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Invoice number for the service
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_InvoiceNumber&quot;</description>
        <inlineHelpText>Invoice number for the service</inlineHelpText>
        <label>Service Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Invoice_Value__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Invoice amount for the service
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_InvoiceValue&quot;</description>
        <inlineHelpText>Invoice amount for the service</inlineHelpText>
        <label>Service Invoice Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Mileage__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Mileage at service time
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Mileage&quot;</description>
        <inlineHelpText>Mileage at service time</inlineHelpText>
        <label>Service Mileage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_PaymentStatus_Reason__c</fullName>
        <description>Attribute in Data Dictionary object Aftersales is &quot;Service_PaymentStatusReason&quot;</description>
        <label>Service PaymentStatus Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Payment_Status__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Whether the service was paid in full, in part of not at all
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_PaymentStatus&quot;</description>
        <inlineHelpText>Whether the service was paid in full, in part of not at all</inlineHelpText>
        <label>Service Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Position__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Position number (for several items in the service)
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Position&quot;</description>
        <inlineHelpText>Position number (for several items in the service)</inlineHelpText>
        <label>Service Position</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Vehicle__c</fullName>
        <description>Attribute in Data Dictionary object Aftersales is &quot;Service_Vehicle&quot;</description>
        <label>Service Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Aftersales_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To flag whether the aftersales record is valid</description>
        <label>Validity</label>
        <type>Checkbox</type>
    </fields>
    <label>Aftersales</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service No*</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aftersales</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>